Feature: Add site file upload/download management

--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -10,17 +10,45 @@
     </head>
     <body class="p-3 mb-2 bg-light text-black">
         <div class="container justify-content-center w-50 p-3" style="margin-top: 5em;">
-            <div class="alert alert-success fill-parent" th:if="${success}">
+            <div class="alert alert-success fill-parent" th:if="${uploadSuccess}">
                 <h1 class="display-5">Success</h1>
-                <span>Your changes were successfully saved. Click <a th:href="@{/home}">here</a> to continue.</span>
+                <span>Your <span th:text="${uploadType}"></span> was successfully saved. Click <a th:href="@{/home}">here</a> to continue.</span>
+            </div>
+            <div class="alert alert-success fill-parent" th:if="${updateSuccess}">
+                <h1 class="display-5">Success</h1>
+                <span>Your <span th:text="${uploadType}"></span> was updated. Click <a th:href="@{/home}">here</a> to continue.</span>
+            </div>
+            <div class="alert alert-success fill-parent" th:if="${deleteSuccess}">
+                <h1 class="display-5">Success</h1>
+                <span>Your <span th:text="${deleteType}"></span> was successfully deleted. Click <a th:href="@{/home}">here</a> to continue.</span>
             </div>
             <div class="alert alert-danger fill-parent" th:if="${noDataError}">
                 <h1 class="display-5">Error</h1>
-                <span>No file data! Click <a th:href="@{/home}">here</a> to continue.</span>
+                <span>Please select a file to upload! Click <a th:href="@{/home}">here</a> to continue.</span>
+            </div>
+            <div class="alert alert-danger fill-parent" th:if="${invalid}">
+                <h1 class="display-5">Error</h1>
+                <span>Invalid request. Click <a th:href="@{/home}">here</a> to continue.</span>
+            </div>
+            <div class="alert alert-danger fill-parent" th:if="${emptyTitle}">
+                <h1 class="display-5">Error</h1>
+                <span>Note not saved. Title required. Click <a th:href="@{/home}">here</a> to continue.</span>
+            </div>
+            <div class="alert alert-danger fill-parent" th:if="${emptyDescription}">
+                <h1 class="display-5">Error</h1>
+                <span>Note not saved. Description is required. Click <a th:href="@{/home}">here</a> to continue.</span>
+            </div>
+            <div class="alert alert-danger fill-parent" th:if="${fileSizeError}">
+                <h1 class="display-5">Error</h1>
+                <span>Maximum file size (2MB) exceeded. Try <a th:href="@{/home}">again</a>.</span>
             </div>
             <div class="alert alert-danger fill-parent" th:if="${IOError}">
                 <h1 class="display-5">Error</h1>
-                <span>Something went wrong while uploading file. Click <a th:href="@{/home}">here</a> to continue.</span>
+                <span>Something went wrong while uploading the file. Try <a th:href="@{/home}">again</a>.</span>
+            </div>
+            <div class="alert alert-danger fill-parent" th:if="${deleteError}">
+                <h1 class="display-5">Error</h1>
+                <span>Something went wrong while deleting the <span th:text="${deleteType}"></span>. Try <a th:href="@{/home}">again</a>.</span>
             </div>
         </div>
     </body>
