--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -51,8 +51,8 @@
                                 <tbody>
                                 <tr th:each="file : ${userFiles}">
                                     <td>
-                                        <a target="_blank" class="btn btn-success">View</a>
-                                        <a  class="btn btn-danger">Delete</a>
+                                        <a class="btn btn-primary" th:href="@{/download(fid=${file.fileId})}">Download</a>
+                                        <a class="btn btn-danger" th:href="@{/file-delete(fid=${file.fileId})}">Delete</a>
                                     </td>
                                     <th scope="row" th:text="${file.fileName}"></th>
                                 </tr>
