Hot fix: Load recent tab after home page refresh

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -8,11 +8,13 @@
 	<title>Page Not Found</title>
 </head>
 <body>
-	<div class="alert alert-danger fill-parent" style="text-align: center">
-		<h1 class="display-5">404</h1>
-		<div>Oops!<br>&#128585;<br>PAGE NOT FOUND!</div>
-		<br>
-		<div>Click <a th:href="@{/home}">here</a> to continue.</div>
+	<div class="container justify-content-center w-50 p-3" style="margin-top: 5em;">
+		<div class="alert alert-danger fill-parent" style="text-align: center">
+			<h1 class="display-5">404</h1>
+			<div>Uh oh!<br>&#128585;<br>PAGE NOT FOUND!</div>
+			<br>
+			<div>Click <a th:href="@{/home}">here</a> to continue.</div>
+		</div>
 	</div>
 </body>
 </html>
