--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -3,7 +3,11 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+        <style>
+            div.alert {
+                text-align: center;
+            }
+        </style>
         <link rel="stylesheet" type="text/css" media="all" th:href="@{/css/bootstrap.min.css}">
 
         <title>Result</title>
