Add credential save functions

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -10,9 +10,8 @@
 <body>
 	<div class="container justify-content-center w-50 p-3" style="margin-top: 5em;">
 		<div class="alert alert-danger fill-parent" style="text-align: center">
-			<h1 class="display-5">404</h1>
-			<div>Uh oh!<br>&#128585;<br>PAGE NOT FOUND!</div>
-			<br>
+			<h1 class="display-5">Uh oh!<br>&#128585;</h1>
+			<h3>Something went wrong!</h3>
 			<div>Click <a th:href="@{/home}">here</a> to continue.</div>
 		</div>
 	</div>
