Create Selenium tests for user signup and login flow

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -65,12 +65,12 @@
                 </div>
             </div>
             <div class="tab-pane fade" id="nav-notes" role="tabpanel" aria-labelledby="nav-notes-tab">
-                <button style="margin: 0.25em;" type="button" class="btn btn-info float-right" onclick="showNoteModal()">
+                <button style="margin: 0.25em;"  type="button" class="btn btn-info float-right" onclick="showNoteModal()">
                     + Add a New Note
                 </button>
                 
                 <div class="table-responsive">
-                    <table class="table table-striped" id="userTable">
+                    <table class="table table-striped" id="noteTable">
                         <thead>
                         <tr>
                             <th style="width: 20%" scope="col"></th>
@@ -92,8 +92,8 @@
                                 </button>
                                 <a class="btn btn-danger" th:href="@{/note-delete(nid=${userNote.noteId})}">Delete</a>
                             </td>
-                            <th scope="row" th:text="${userNote.noteTitle}"></th>
-                            <td th:text="${userNote.noteDescription}"></td>
+                            <th class="note-title" scope="row" th:text="${userNote.noteTitle}"></th>
+                            <td class="note-desc" th:text="${userNote.noteDescription}"></td>
                         </tr>
                         </tbody>
                     </table>
@@ -125,7 +125,7 @@
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                <button type="button" class="btn btn-primary" onclick="$('#noteSubmit').click();">Save changes</button>
+                                <button type="button" class="btn btn-primary" id="saveNoteButton" onclick="$('#noteSubmit').click();">Save changes</button>
                             </div>
                         </div>
                     </div>
@@ -198,7 +198,7 @@
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                <button type="button" class="btn btn-primary" onclick="$('#credentialSubmit').click();">Save changes</button>
+                                <button type="button" class="btn btn-primary" id="saveCredentialButton" onclick="$('#credentialSubmit').click();">Save changes</button>
                             </div>
                         </div>
                     </div>
